# holdoumenBack

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
.trae/documents/: api-change-frontend-guide.md  database_bind_plan.md  login_feature_plan.md  modify-prompt-plan.md
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  chat.py  health.py
app/core/: characters.py  config.py  deps.py  logging.py  prompts.py  security.py
app/db/: session.py
app/models/: user.py
app/schemas/: auth.py  chat.py
app/services/: langchain_service.py
docs/: frontend-auth-guide.md
fastapi_langchain_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chat_stream.py  test_health.py
